# protoST

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  KNOWN_ISSUES.md  README.md
docs/: INTEROP.md  (+5 more)
tests/: CMakeLists.txt
tests/cli/: test_cli_actor_stress.sh  test_cli_dap.sh  test_cli_dap_session.sh  test_cli_debugger.sh  test_cli_dump_ast.sh  test_cli_eval.sh  test_cli_help.sh  test_cli_repl.sh  test_cli_venv.sh
tests/conformance/: README.md  do_yielding.st  do_yielding_actor.st  run_conformance.sh
tests/conformance/02-lexical/: array-literal-bare-identifier-is-symbol.st  array-literal-empty.st  array-literal-integers.st  array-literal-mixed.st  char-literal.st  comment-anywhere.st  comment-multiline.st  dynamic-array-empty.st  dynamic-array.st  float-literal.st  integer-literal.st  integer-zero.st  negative-integer-literal.st  negative-via-subtraction.st  nested-literal-array.st  string-doubled-quote.st  string-empty.st  string-literal.st  string-multiline.st  symbol-literal.st
tests/conformance/03-grammar/: assignment-chain-value.st  assignment-is-expression.st  assignment.st  binary-binds-tighter-than-keyword.st  binary-left-associative.st  binary-message.st  block-arg-and-local.st  block-empty-is-nil.st  block-last-statement-value.st  block-zero-arg.st  cascade-value-is-last.st  cascade.st  keyword-message.st  parentheses-override-precedence.st  top-level-return.st  top-level-statements-in-order.st  trailing-period-optional.st  unary-binds-tighter-than-binary.st  unary-chains-left-to-right.st  unary-message.st
tests/conformance/04-object-model/: addbehavior-composes-with-uses.st  addbehavior-future-instances-only.st  addbehavior-keeps-own-methods.st  addbehavior-runtime-composition.st  class-side-method.st  class-side-not-on-instance.st  define-class-and-instance.st  global-binding.st  inheritance-chain.st  instance-variable-readwrite.st  instance-variable-starts-nil.st  method-override.st  mixin-diamond-order.st  mixin-expression-receiver.st  mixin-instance-variables.st  mixin-own-super.st  mixin-super-reaches-mixin.st  mixin-super-resolution.st  mixin-two-methods.st  new-does-not-call-initialize.st  newchild-synonym.st  no-explicit-return-yields-self.st  printstring-class.st  printstring-instance-vowel.st  printstring-instance.st  printstring-override.st  self-send.st  super-send.st  undefined-global-error.st
tests/conformance/05-messages/: dispatch-first-definer-wins.st  dispatch-walks-prototype-chain.st  doesnotunderstand-is-error.st  doesnotunderstand-not-catchable.st  keyword-argument-count.st  primitive-dispatch.st  super-dispatch-keeps-self.st  super-skips-receiver-override.st
tests/conformance/06-blocks/: and-not-bound.st  block-literal-does-not-run.st  block-value-four-args.st  block-value-one-arg.st  block-value-three-args.st  block-value-two-args.st  block-value.st  block-wrong-arity-error.st  closure-capture-by-reference.st  closure-captures-method-temps.st  closure-captures-module-variable.st  closure-nested-block-captures-outer.st  closure-outlives-method.st  closure-self-is-enclosing-method.st  iffalse-true-yields-nil.st  iffalse.st  iftrue-false-yields-nil.st  iftrue-iffalse-not-bound.st  iftrue.st  instance-variable-not-closure-captured.st  isnil-not-bound.st  shadowing-block-temp.st  whiletrue-returns-nil.st  whiletrue.st
tests/conformance/07-non-local-return/: block-fall-off-is-local.st  dead-home-return.st  guard-clause-returns-instance-variable.st  method-return-direct.st  nonlocal-return-abandons-trailing.st  nonlocal-return-deep-nesting.st  nonlocal-return-from-block.st
tests/conformance/08-exceptions/: ensure-runs-on-normal.st  ensure-runs-on-unwind.st  error-not-resumable.st  handler-fall-off-yields-value.st  handler-pass.st  handler-resume-value.st  handler-resume.st  handler-retry.st  handler-return.st  ifcurtailed-runs-on-unwind.st  ifcurtailed-skips-on-normal.st  inline-conditional-rejects-non-boolean.st  inner-handler-disabled-in-handler.st  messagetext.st  non-matching-propagates.st  on-do-on-do.st  outer-strict-semantics.st  protected-completes-normally.st  signal-bare.st  signal-caught.st  signal-instance.st  subclass-caught-by-superclass-handler.st  uncaught-error-aborts.st
tests/conformance/09-collections/: array-at-put-returns-value.st  array-at-put.st  array-new-size.st  array-new.st  array-with.st  array-withall.st  association-key-value.st  association-key.st  bag-occurrences.st  bag-size-counts-occurrences.st  collect-species.st  dict-at-absent-error.st  dict-at-ifabsent.st  dict-at-ifabsentput.st  dict-at-put-returns-value.st  dict-at-put.st  dict-includeskey.st  dict-keys.st  dict-keysanddo.st  dict-removekey.st  dict-values.st  index-error-catchable.st  index-out-of-range-error.st  indexing-one-based.st  interval-at.st  interval-do.st  interval-first-last.st  interval-to-by.st  interval-to.st  number-to-by-do-countdown.st  number-to-by-do.st  number-to-do.st  oc-add.st  oc-addall.st  oc-addfirst.st  oc-last.st  oc-remove-absent-error.st  oc-remove-ifabsent.st  oc-remove.st  oc-removefirst-shrinks.st  (+22 more)
tests/conformance/10-actors/: actor-proxy-printstring.st  actor-self-is-base-object.st  actor-stays-alive-after-error.st  asactor-async-send.st  atom-basics.st  atom-swap-concurrent.st  atom-swap.st  future-resolve.st  future-wait-reraises-rejection.st  future-wait-value.st  parallel-sleep-via-unmanaged.st  setinstvar-cas.st  undrained-mailbox-load.st
tests/fixtures/: counter.st  counter_lib.st  halt_demo.st  hello.st  lib_simple.st
tests/unit/: test_ast_printer.cpp  test_bootstrap.cpp  test_bytecode_module.cpp  test_closure_capture.cpp  test_collections.cpp  test_compiler.cpp  test_conformance_fixes.cpp  test_dap_transport.cpp  test_debugger.cpp  test_exceptions.cpp  test_execution_engine.cpp  test_lexer.cpp  test_line_mapping.cpp  test_mnt_b1_fixes.cpp  test_mnt_b2_fixes.cpp  test_mnt_c_numbers.cpp  test_non_local_return.cpp  test_parser.cpp  test_sanity.cpp  test_t3b_mixins.cpp  test_t3c_addbehavior.cpp  test_t4b_math.cpp  test_t5a_interop.cpp  test_venv.cpp  test_wide_operands.cpp  test_worker_thread.cpp
(+285 files in other folders)
